# Archon

./: .dockerignore  .env.example  .gitignore  CLAUDE-ARCHON.md  CLAUDE.md  CNAME  CONTRIBUTING.md  LICENSE  README.md  archon_graph.py  docker-compose.docs.yml  docker-compose.yml  future_enhancements.py  graph_service.py  mcp-config.json  run_docker.py  setup_mcp.py  site_pages.sql  streamlit_ui.py
python/: .dockerignore  .gitignore  Dockerfile.agents  Dockerfile.mcp  Dockerfile.server  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.agents.txt  requirements.mcp.txt  requirements.server.txt
python/src/agents/: __init__.py  base_agent.py  document_agent.py  mcp_client.py  rag_agent.py  server.py
python/src/mcp/: __init__.py  mcp_server.py
python/src/mcp/modules/: __init__.py  models.py  project_module.py  rag_module.py
python/src/server/: __init__.py  main.py  socketio_app.py
python/src/server/api_routes/: __init__.py  agent_chat_api.py  bug_report_api.py  coverage_api.py  internal_api.py  knowledge_api.py  mcp_api.py  projects_api.py  settings_api.py  socketio_broadcasts.py  socketio_handlers.py  tests_api.py
python/src/server/config/: __init__.py  config.py  logfire_config.py  service_discovery.py
python/src/server/middleware/: logging_middleware.py
python/src/server/services/: __init__.py  background_task_manager.py  client_manager.py  crawler_manager.py  credential_service.py  llm_provider_service.py  mcp_service_client.py  mcp_session_manager.py  prompt_service.py  source_management_service.py  threading_service.py
python/src/server/services/crawling/: __init__.py  code_extraction_service.py  crawling_service.py  document_storage_operations.py  progress_mapper.py
python/src/server/services/embeddings/: __init__.py  contextual_embedding_service.py  embedding_exceptions.py  (+1 more)
python/src/server/testing/: README.md  __init__.py  debug_connectivity.py  prp_data_validator.py  prp_viewer_test.py  run_prp_test.sh
python/src/server/utils/: __init__.py  document_processing.py
python/tests/: __init__.py  conftest.py  test_api_essentials.py  test_async_background_task_manager.py  test_async_credential_service.py  test_async_embedding_service.py  test_async_llm_provider_service.py  test_business_logic.py  test_crawl_orchestration_isolated.py  test_embedding_service_no_zeros.py  test_keyword_extraction.py  test_port_configuration.py  test_rag_simple.py  test_rag_strategies.py  test_service_integration.py  test_settings_api.py  test_supabase_validation.py  test_url_handler.py
(+376 files in other folders)
